//noinspection GradleDependency
apply plugin: 'com.android.application'
apply plugin: 'com.google.firebase.firebase-perf'
apply plugin: 'com.google.gms.google-services'
apply plugin: 'com.google.firebase.crashlytics'
apply plugin: 'maven-publish'
apply plugin: 'com.google.gms.google-services'




android {
    signingConfigs {

    }
    compileSdkVersion 31
    buildToolsVersion '30.0.3'

    useLibrary 'org.apache.http.legacy'
    useLibrary 'android.test.runner'
    useLibrary 'android.test.base'
    useLibrary 'android.test.mock'

    buildFeatures {
        buildConfig = true
    }
    defaultConfig {
        applicationId "com.stonefacesoft.ottaa"
        minSdkVersion 21
        targetSdkVersion 31
        versionCode 97
        versionName "6.7.7" //
        // Enabling multidex support.
        multiDexEnabled true
        resConfigs 'ar,en,es,it'
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"//
        testHandleProfiling true
        testFunctionalTest true
        testInstrumentationRunnerArguments clearPackageData: 'true'
    }

    bundle{
        language{
            enableSplit = false
        }
    }

    buildTypes {
        debug {
            minifyEnabled true
            applicationIdSuffix '.debug'
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            zipAlignEnabled true
            testCoverageEnabled true

        }
        sourceSets.debug.resources.srcDirs = ['src/debug/res']
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            zipAlignEnabled true
        }
        lintOptions {
            abortOnError false
            checkDependencies true
        }


    }
//    flavorDimensions "accessibility"
//    productFlavors {
//
//        demo {
//            // Assigns this product flavor to the "version" flavor dimension.
//            // If you are using only one dimension, this property is optional,
//            // and the plugin automatically assigns all the module's flavors to
//            // that dimension.
//            dimension "accessibility"
//            applicationIdSuffix ".demo"
//            versionNameSuffix "-demo"
//        }
//        full {
//            dimension "accessibility"
//            applicationIdSuffix ".full"
//            versionNameSuffix "-full"
//        }
//    }


//        packagingOptions {
//            exclude 'META-INF/LICENSE.txt'
//            exclude 'META-INF/NOTICE.txt'
//        }
    testOptions{
        unitTests.returnDefaultValues = true
        unitTests.includeAndroidResources true
        unitTests.all{
            jvmArgs '-XX:MaxPermSize=256m'
        }

    }

    compileOptions {
        targetCompatibility 1.8
        sourceCompatibility 1.8
    }

}

repositories {
    mavenCentral()
    maven() {
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }
    maven { url "https://jitpack.io" }
    maven {
        url 'https://maven.google.com/'
        name 'Google'
    }
}
dependencies {

    testImplementation "org.json:json:20210307"
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.11.0@aar') {
        transitive = true
    }

    // Required -- JUnit 4 framework
    implementation files('libs/SimpleNLG-4.4.8.jar')
    implementation('com.google.dagger:dagger:2.28.3') {
        // exclude group: 'com.google.guava'
    }

    // Optional -- Mockito framework
    //androidx library
    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'androidx.browser:browser:1.4.0'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation "androidx.core:core:1.7.0"
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
    implementation 'androidx.gridlayout:gridlayout:1.0.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'androidx.preference:preference:1.2.0'
    implementation 'androidx.recyclerview:recyclerview:1.2.1'
    // places library
    implementation 'com.google.android.libraries.places:places:2.5.0'
    //play services library
    implementation 'com.google.android.gms:play-services-analytics:18.0.1'
    implementation 'com.google.android.gms:play-services-auth:20.1.0'
    implementation 'com.google.android.gms:play-services-base:18.0.1'
    implementation 'com.google.android.gms:play-services-location:19.0.1'

    //implementation
    implementation 'com.android.volley:volley:1.2.1'
    implementation 'com.airbnb.android:lottie:3.0.0'
    implementation group: 'com.google.apis', name: 'google-api-services-translate', version: 'v2-rev48-1.22.0'
    implementation group: 'com.google.api-client', name: 'google-api-client-gson', version: '1.25.0'
    implementation 'androidx.navigation:navigation-fragment:2.4.1'
    implementation 'androidx.navigation:navigation-ui:2.4.1'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    testImplementation 'junit:junit:4.13.2'
    testImplementation "org.mockito:mockito-core:3.10.0"
    testImplementation "org.robolectric:robolectric:4.3.1"
    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'

    //Testing

    androidTestImplementation 'androidx.test:core:1.4.0'

    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'

    // AndroidJUnitRunner and JUnit Rules
    androidTestImplementation 'androidx.test:runner:1.4.0'
    androidTestImplementation 'androidx.test:rules:1.4.0'
    androidTestUtil 'androidx.test:orchestrator:1.4.1'

    // Assertions
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.ext:truth:1.4.0'
    androidTestImplementation 'com.google.truth:truth:1.0'

    // Espresso dependencies
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
    androidTestImplementation 'androidx.test.espresso:espresso-accessibility:3.4.0'
    androidTestImplementation 'androidx.test.espresso:espresso-web:3.4.0'
    androidTestImplementation 'androidx.test.espresso.idling:idling-concurrent:3.4.0'

    // The following Espresso dependency can be either "implementation"
    // or "androidTestImplementation", depending on whether you want the
    // dependency to appear on your APK's compile classpath or the test APK
    // classpath.
    androidTestImplementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'


    // The following Espresso dependency can be either "implementation"
    // or "androidTestImplementation", depending on whether you want the
    // dependency to appear on your APK's compile classpath or the test APK
    // classpath.
    //
    implementation('com.google.code.findbugs:jsr305:3.0.2')
    implementation 'com.jakewharton:butterknife:9.0.0-rc2'

    //library
    implementation 'com.annimon:stream:1.2.1'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'com.github.skydoves:colorpickerpreference:1.0.7'
    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'

    // firebase library
    implementation platform('com.google.firebase:firebase-bom:29.1.0')
    implementation 'com.google.firebase:firebase-auth'
    implementation 'com.google.firebase:firebase-config:21.0.2'
    implementation 'com.google.firebase:firebase-core:20.1.2'
    implementation 'com.google.firebase:firebase-database:20.0.4'
    implementation 'com.google.firebase:firebase-messaging:23.0.2'
    implementation 'com.google.firebase:firebase-inappmessaging-display:20.1.2'
    implementation 'com.google.firebase:firebase-perf:20.0.6'
    implementation 'com.google.firebase:firebase-storage:20.0.1'


    implementation "io.grpc:grpc-okhttp:1.44.1"



    // material library
    implementation 'com.google.android.material:material:1.5.0'

    implementation 'com.google.firebase:firebase-crashlytics:18.2.9'
    implementation 'com.google.firebase:firebase-analytics:20.1.2'
    //Guava library
    implementation("com.google.guava:guava:30.1.1-android")
    //Facebook
    implementation 'com.facebook.android:facebook-android-sdk:8.2.0'
    implementation 'com.facebook.android:facebook-core:12.3.0'
    //Image Cropper
    implementation 'com.github.CanHub:Android-Image-Cropper:3.3.5'
    // pictograms library
    implementation 'com.github.OTTAA-Project:PictogramsLibrary:0.1.9.22'
    //Sendgrid integration
}


configurations {
    all {
        exclude module: 'httpclient'
        exclude group: "com.google.protobuf", module: "protobuf-lite"
    }
}



/*
configurations.all {
    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
        def requested = details.requested
        if (requested.group == 'com.android.support') {
            if (!requested.name.startsWith("multidex")) {
                details.useVersion '25.3.0'
            }
        }
    }
}
*/
